@@ -1,11 +1,11 @@
 README:  Tk
-    This is the Tk 8.4b1 source distribution.
+    This is the Tk 8.4b2 source distribution.
     Tcl/Tk is also available through NetCVS:
 	http://tcl.sourceforge.net/
     You can get any source release of Tcl from the file distributions
     link at the above URL.
 
-RCS: @(#) $Id: README,v 1.34 2002/06/22 00:02:49 dkf Exp $
+RCS: @(#) $Id: README,v 1.35 2002/07/14 17:29:57 dgp Exp $
 
 1. Introduction
 ---------------
